<?xml version="1.0" encoding="UTF-8"?>
<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.globaltester</groupId>
  <artifactId>org.globaltester.parent</artifactId>
  <version>3.10.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <forceContextQualifier>SNAPSHOT</forceContextQualifier>

    <maven.compiler.release>17</maven.compiler.release> <!-- since JDK 9 -->
	
    <tycho.version>4.0.8</tycho.version>
    <tycho.testArgLine>-Xmx3G -Djdk.net.URLClassPath.disableClassPathURLCheck=true --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/javax.crypto.spec=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</tycho.testArgLine>

    <argLine>-Xmx3G -Djdk.net.URLClassPath.disableClassPathURLCheck=true --add-opens java.base/java.security=ALL-UNNAMED --add-opens java.base/javax.crypto.spec=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>

    <jacoco-version>0.8.12</jacoco-version>
    <jacoco.outputDir>${project.basedir}/../../jacoco</jacoco.outputDir>
    <jacoco.out.utPath>${jacoco.outputDir}/jacoco-ut.exec</jacoco.out.utPath>
    <jacoco.out.itPath>${jacoco.outputDir}/jacoco-it.exec</jacoco.out.itPath>

    <sonar.language>java</sonar.language>
    <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
    <sonar.scm.disabled>true</sonar.scm.disabled>
    <sonar.exclusions>**/com4j/**,**/comprion/**,**/*Test.java,**/*rossover*,**/simulator/legacy/**,**/javacard/**,**/javacardx/**,**/gen/**</sonar.exclusions>

    <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
    <sonar.jacoco.reportPath>${jacoco.out.utPath}</sonar.jacoco.reportPath>
    <sonar.jacoco.itReportPath>${jacoco.out.itPath}</sonar.jacoco.itReportPath>

    <junit.version>4.13.2</junit.version>
    <!-- <maven-surefire.version>2.22.2</maven-surefire.version> -->
    <maven-surefire.version>3.3.0</maven-surefire.version>
    <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
    
    <dependency-check-maven.version>10.0.1</dependency-check-maven.version>
    <cyclonedx-maven-plugin.version>2.8.0</cyclonedx-maven-plugin.version>
    <maven-antrun-plugin.version>3.1.0</maven-antrun-plugin.version>
    <markdown-page-generator-plugin.version>0.22.14</markdown-page-generator-plugin.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>${build-helper-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>parse-version</id>
            <phase>validate</phase>
            <goals>
              <goal>parse-version</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <compilerArgument>-err:-forbidden</compilerArgument>
       	  <compilerArgs>
            <arg>--module-path</arg>
            <arg>${java.home}/jmods</arg>
            <arg>--add-modules</arg>
            <arg>java.smartcardio</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-packaging-plugin</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <format>'nightly'yyyyMMddHHmm</format>
        </configuration>
      </plugin>
      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-p2-repository-plugin</artifactId>
         <version>${tycho.version}</version>
         <configuration>
            <includeAllDependencies>true</includeAllDependencies>
         </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>aarch64</arch>
            </environment>
          </environments>
          <executionEnvironment>JavaSE-17</executionEnvironment>
          <target>		
            <artifact>
              <groupId>org.globaltester</groupId>
              <artifactId>org.globaltester.parent.target</artifactId>
              <version>3.10.0-SNAPSHOT</version>
            </artifact>
          </target>
          <!-- <pomDependencies>consider</pomDependencies> -->
          <dependency-resolution>
            <extraRequirements>
              <requirement>
                <type>eclipse-plugin</type>
                <id>org.globaltester.lib.jaxws</id>
                <versionRange>0.0.0</versionRange>
              </requirement>
            </extraRequirements>
          </dependency-resolution>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${sonar-maven-plugin.version}</version>
      </plugin>
    </plugins>
    <finalName>${project.artifactId}-${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-${forceContextQualifier}</finalName>
  </build>




  <profiles>
    <profile>
      <id>jacoco</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco-version}</version>
            <executions>
              <execution>
                <id>pre-unit-test</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <configuration>
                  <destFile>${jacoco.out.utPath}</destFile>
                </configuration>
              </execution>
              <execution>
                <id>pre-integration-test</id>
                <goals>
                  <goal>prepare-agent-integration</goal>
                </goals>
                <configuration>
                  <destFile>${jacoco.out.itPath}</destFile>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
